# tasks_django

./: .env  pyproject.toml
Django-Task/: db.sqlite3  manage.py
Django-Task/MegaConfig/: asgi.py  settings.py  urls.py  wsgi.py
